tests/typing/fail/inherit_method.rb

class A
  def f2()
  end
end

class B < A
end

class C
  def g(x)
    x.f()
  end
end

C.new.g(B.new)
